--- a/autos-backend/package.json
+++ b/autos-backend/package.json
@@ -16,15 +16,24 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/mysql": "^2.15.25",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
     "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
+    "bcrypt-ts": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.7.0",
-    "mysql2-promise": "^0.1.4"
+    "mysql2-promise": "^0.1.4",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
