--- a/autos-backend/package.json
+++ b/autos-backend/package.json
@@ -6,13 +6,19 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-typescript": "^7.23.3",
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.5",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
@@ -24,6 +30,7 @@
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "axios": "^1.6.5",
+    "babel-jest": "^29.7.0",
     "bcrypt": "^5.1.1",
     "bcrypt-ts": "^5.0.1",
     "cors": "^2.8.5",
