--- a/autos-frontend/package.json
+++ b/autos-frontend/package.json
@@ -22,6 +22,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0"
   },
