--- a/autos-backend/package.json
+++ b/autos-backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "ts-node dist/index.js",
     "test": "jest"
   },
   "keywords": [],
@@ -16,9 +16,8 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.5",
-    "ts-jest": "^29.1.2",
+    "@types/node": "^20.11.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
@@ -26,21 +25,27 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mysql": "^2.15.25",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.6.5",
-    "babel-jest": "^29.7.0",
     "bcrypt": "^5.1.1",
     "bcrypt-ts": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.7.0",
     "mysql2-promise": "^0.1.4",
+    "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^9.0.1"
   }
 }
