--- a/autos-backend/package.json
+++ b/autos-backend/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
@@ -34,6 +35,7 @@
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "bcrypt-ts": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
