--- a/autos-frontend/package.json
+++ b/autos-frontend/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mui/icons-material": "^5.15.7",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.7",
     "@mui/x-date-pickers": "^6.19.2",
     "@reduxjs/toolkit": "^2.1.0",
