--- a/autos-frontend/package.json
+++ b/autos-frontend/package.json
@@ -24,7 +24,8 @@
     "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.2",
+    "react-spring": "^9.7.3"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
