Insert, table value response, auth, fetch brand

--- a/autos-frontend/tsconfig.json
+++ b/autos-frontend/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "../autos-backend/src/interfaces/ITableProps.ts", "../autos-backend/src/enums/URLs.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
