--- a/autos-backend/package.json
+++ b/autos-backend/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/mysql": "^2.15.25",
     "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
@@ -42,6 +43,7 @@
     "express-session": "^1.18.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.7.0",
     "mysql2-promise": "^0.1.4",
