--- a/autos-frontend/package.json
+++ b/autos-frontend/package.json
@@ -17,14 +17,12 @@
     "@mui/material": "^5.15.7",
     "@mui/x-date-pickers": "^6.19.2",
     "@reduxjs/toolkit": "^2.1.0",
-    "@types/react-google-recaptcha": "^2.1.9",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
     "mui-tel-input": "^5.1.2",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
-    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
@@ -36,6 +34,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
