--- a/autos-backend/package.json
+++ b/autos-backend/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
+    "@types/archiver": "^6.0.2",
     "@types/node": "^20.11.17",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
@@ -35,6 +36,7 @@
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/uuid": "^9.0.8",
+    "archiver": "^7.0.1",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "bcrypt-ts": "^5.0.1",
