--- a/autos-backend/package.json
+++ b/autos-backend/package.json
@@ -42,6 +42,7 @@
     "bcrypt-ts": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
