--- a/autos-frontend/package.json
+++ b/autos-frontend/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.11",
-    "@mui/material": "^5.15.7",
+    "@mui/lab": "^5.0.0-alpha.169",
+    "@mui/material": "^5.15.14",
     "@mui/x-date-pickers": "^6.19.2",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.5",
