--- a/autos-backend/package.json
+++ b/autos-backend/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node dist/index.js",
-    "test": "jest"
+    "start": "ts-node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +26,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-mysql-session": "^3.0.5",
     "@types/express-session": "^1.17.10",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
@@ -44,17 +44,19 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.2",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "express-mysql-session": "^3.0.2",
     "express-session": "^1.18.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.7.0",
+    "mysql2": "^3.9.7",
     "mysql2-promise": "^0.1.4",
     "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "passport-local-mysql": "^5.0.10",
     "uuid": "^9.0.1"
   }
 }
