--- a/autos-backend/package.json
+++ b/autos-backend/package.json
@@ -35,6 +35,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/sequelize": "^4.28.20",
     "@types/uuid": "^9.0.8",
     "archiver": "^7.0.1",
     "axios": "^1.6.5",
@@ -57,6 +58,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mysql": "^5.0.10",
+    "sequelize": "^6.37.3",
     "uuid": "^9.0.1"
   }
 }
