--- a/autos-frontend/package.json
+++ b/autos-frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.11",
+    "@mui/joy": "^5.0.0-beta.36",
     "@mui/lab": "^5.0.0-alpha.169",
     "@mui/material": "^5.15.14",
     "@mui/x-date-pickers": "^6.19.2",
@@ -32,6 +33,7 @@
     "react-spring": "^9.7.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
     "@hookform/devtools": "^4.3.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -39,10 +41,13 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "globals": "^15.2.0",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^7.9.0",
     "vite": "^5.0.8"
   }
 }
