--- a/autos-frontend/package.json
+++ b/autos-frontend/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.10",
     "mui-tel-input": "^5.1.2",
     "react": "^18.2.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -31,6 +32,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
     "react-spring": "^9.7.3"
   },
   "devDependencies": {
