--- a/autos-backend/package.json
+++ b/autos-backend/package.json
@@ -6,22 +6,38 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node dist/index.js"
+    "start": "ts-node dist/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-typescript": "^7.23.3",
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "@babel/preset-typescript": "^7.24.6",
     "@jest/globals": "^29.7.0",
     "@types/archiver": "^6.0.2",
+    "@types/chai": "^4.3.16",
+    "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.17",
-    "ts-jest": "^29.1.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "ava": "^6.1.3",
+    "babel-jest": "^29.7.0",
+    "chai": "^5.1.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "mocha": "^10.4.0",
+    "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.12"
   },
   "dependencies": {
+    "@babel/cli": "^7.24.6",
+    "@babel/node": "^7.24.6",
     "@mui/joy": "^5.0.0-beta.36",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.6",
@@ -29,8 +45,6 @@
     "@types/express": "^4.17.21",
     "@types/express-mysql-session": "^3.0.5",
     "@types/express-session": "^1.17.10",
-    "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/mysql": "^2.15.25",
     "@types/nodemailer": "^6.4.14",
@@ -49,11 +63,9 @@
     "express": "^4.19.2",
     "express-mysql-session": "^3.0.2",
     "express-session": "^1.18.0",
-    "jest": "^29.7.0",
-    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.9.7",
+    "mysql2": "^3.10.0",
     "mysql2-promise": "^0.1.4",
     "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
