--- a/autos-backend/package.json
+++ b/autos-backend/package.json
@@ -38,7 +38,6 @@
   "dependencies": {
     "@babel/cli": "^7.24.6",
     "@babel/node": "^7.24.6",
-    "@mui/joy": "^5.0.0-beta.36",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
@@ -56,6 +55,7 @@
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "bcrypt-ts": "^5.0.1",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
