--- a/autos-frontend/package.json
+++ b/autos-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "autos-frontend",
   "private": true,
   "version": "0.0.0",
+  "sideEffects": false,
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,43 +14,66 @@
     "@babel/plugin-transform-runtime": "^7.24.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.15.11",
-    "@mui/joy": "^5.0.0-beta.36",
-    "@mui/lab": "^5.0.0-alpha.169",
-    "@mui/material": "^5.15.19",
-    "@mui/x-date-pickers": "^6.19.2",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.7.0",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.5",
+    "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
     "mui-tel-input": "^5.1.2",
     "react": "^18.2.0",
-    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "react-lazyload": "^3.2.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "react-slick": "^0.30.2",
-    "react-spring": "^9.7.3"
+    "react-spring": "^9.7.3",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
     "@eslint/js": "^9.2.0",
-    "@hookform/devtools": "^4.3.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-direct-import": "^1.0.0",
+    "babel-plugin-import": "^1.13.8",
+    "babel-preset-es2015": "^6.24.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^11.1.0",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "file-loader": "^6.2.0",
     "globals": "^15.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "npm-install-webpack-plugin": "^4.0.5",
+    "sass": "^1.77.6",
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.9.0",
-    "vite": "^5.0.8"
+    "url-loader": "^4.1.1",
+    "vite": "^5.0.8",
+    "webpack": "^5.92.1",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-shell-plugin": "^0.5.0"
   }
 }
