--- a/autos-frontend/package.json
+++ b/autos-frontend/package.json
@@ -5,12 +5,13 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "start": "webpack serve --config webpack.config.js --mode development",
+    "build": "webpack --config webpack.config.js --mode production",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/plugin-transform-object-rest-spread": "^7.24.7",
     "@babel/plugin-transform-runtime": "^7.24.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -19,9 +20,11 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.7.0",
     "@reduxjs/toolkit": "^2.1.0",
+    "@types/react-redux": "^7.1.33",
     "axios": "^1.6.5",
-    "bootstrap": "^5.3.3",
+    "core-js": "^3.37.1",
     "dayjs": "^1.11.10",
+    "glob": "^10.4.2",
     "mui-tel-input": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,20 +32,25 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-lazyload": "^3.2.1",
-    "react-redux": "^9.1.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-spring": "^9.7.3",
+    "rimraf": "^5.0.7",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
+    "@babel/plugin-transform-class-properties": "^7.24.7",
+    "@babel/plugin-transform-logical-assignment-operators": "^7.24.7",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
     "@eslint/js": "^9.2.0",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "babel-loader": "^9.1.3",
@@ -52,6 +60,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^11.1.0",
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -62,11 +71,12 @@
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "mini-css-extract-plugin": "^2.9.0",
-    "npm-install-webpack-plugin": "^4.0.5",
+    "npm-install-webpack-plugin": "^4.0.4",
     "sass": "^1.77.6",
     "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.2.2",
+    "typescript": "^5.5.2",
     "typescript-eslint": "^7.9.0",
     "url-loader": "^4.1.1",
     "vite": "^5.0.8",
