--- a/autos-frontend/package.json
+++ b/autos-frontend/package.json
@@ -5,8 +5,9 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js --mode development",
-    "build": "webpack --config webpack.config.js --mode production",
+    "dev": "vite",
+    "build": "vite build",
+    "tsc": "tsc",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -15,6 +16,8 @@
     "@babel/plugin-transform-runtime": "^7.24.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@eslint/config-array": "^0.16.0",
+    "@eslint/object-schema": "^2.1.4",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
@@ -26,16 +29,15 @@
     "dayjs": "^1.11.10",
     "glob": "^10.4.2",
     "mui-tel-input": "^5.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-lazyload": "^3.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
-    "react-spring": "^9.7.3",
     "rimraf": "^5.0.7",
+    "serve": "^14.2.3",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
@@ -53,37 +55,12 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "babel-loader": "^9.1.3",
     "babel-plugin-direct-import": "^1.0.0",
     "babel-plugin-import": "^1.13.8",
-    "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^4.0.0",
-    "compression-webpack-plugin": "^11.1.0",
-    "css-loader": "^7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "file-loader": "^6.2.0",
-    "globals": "^15.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "less": "^4.2.0",
-    "less-loader": "^12.2.0",
-    "mini-css-extract-plugin": "^2.9.0",
-    "npm-install-webpack-plugin": "^4.0.4",
-    "sass": "^1.77.6",
-    "style-loader": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.10",
-    "ts-loader": "^9.5.1",
+    "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.5.2",
-    "typescript-eslint": "^7.9.0",
     "url-loader": "^4.1.1",
-    "vite": "^5.0.8",
-    "webpack": "^5.92.1",
-    "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "webpack-shell-plugin": "^0.5.0"
+    "vite": "^5.0.8"
   }
 }
