--- a/autos-frontend/tsconfig.json
+++ b/autos-frontend/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
+
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
+
+    "outDir": "./dist",
+    "rootDir": "./src",
 
     "moduleResolution": "Bundler",
     "noEmit": false,
